Added Symantic Code into HTML

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <!--Hoirseaon was split into useless functions-->
-    <div class="header">
+    <header class="header">
         <h1>Horiseon</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,10 +23,12 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
+        </nav>
+    </header>
+    <figure class="hero">
+       <figcaption Image of group Meeting></figcaption>
+    </figure>
+    <main class="content">
         <!--Creat Class content_img to replace monotonous code-->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left content_img" />
@@ -49,7 +51,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </main>
     <div class="benefits">
         <div class="benefit_h3">
             <!--Added Class for Image, Organized Div Classes-->
